# SwamynathanLab

./: .gitignore  SwamynathanLab.lnk  View Lab Notebook Online.url  condaprompt-base.bat  install_latest_image_trioxide_build.bat  password to view lab notebook online.txt  swamynathan_lab.yml
Cell Marking Software -- Stable/: Cell Marking Software -- Stable.code-workspace  cellmarkingsoftware.yml  run.bat  setup.bat  setup.ps1  setup.py
Code Archive/image_trioxide/: Cargo.toml  debug.txt  env.bat  image_trioxide.code-workspace  io3.py  pyproject.toml  unit_testing.py
Code Archive/image_trioxide/src/: error_type.rs  error_types.rs  lib.rs
Code Archive/image_trioxide/src/types/: rgb_color.rs  rgb_image.rs
Code Archive/image_trioxide/unit_tests/: rgb_image.py
Retina Mapping Project/: .gitignore  condaprompt.bat  create_mtv_movie.py  generate_training_data.py  install_io3.py  main.py  pipeline.py  pipeline_for_prepared_cell_layers.py  pipeline_to_prepare_cell_layers.py  requirements.txt  train_single_cell_differentiator.py  workspace.code-workspace
Retina Mapping Project - Backup/: ClickUp -- Retina Mapping Project Tracking.url  apply_u_net.py  check_pickle.py  generate_training_data.py  get_conservative_cell_mask.py  install_io3.py  investigate_pickle.py  pipeline.py  retina_mapping_project.code-workspace  train_single_cell_differentiator.py
cellmark2/: cellmark2.code-workspace  main.py  (+3 more)
io3/: Cargo.toml  condaprompt.bat  env.bat  io3.code-workspace  pyproject.toml
io3/io3/pycore/: image.py
io3/src/: lib.rs
io3/src/types/: image.rs  io3_error.rs  pixel.rs
(+89 files in other folders)
