[package]
name = "image_trioxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "image_trioxide"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module","abi3-py39"] }
serde_json = "1.0"
serde = {version="1.0.148", features=["derive"]}
